fix: created class custom style scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,7 +116,28 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+
+
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 2px;
+    border-radius: 6px;
+    /* Largura da barra de rolagem */
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: #4a5568;
+    /* Cor do "polegar" da barra */
+    border-radius: 6px;
+    /* Bordas arredondadas */
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-track {
+    background-color: #edf2f7;
+    /* Cor do fundo da barra */
   }
 }
